--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,16 @@ spring.jpa.generate-ddl=true
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.freemarker.expose-request-attributes=true
 upload.path=C:/Users/a.davydov/Desktop/sweater-JPA_Postgres/sweater-JPA_Postgres/src/main/resources/uploads
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create
+
+spring.mail.host=smtp.gmail.com
+spring.mail.username=testsendemailt@gmail.com
+spring.mail.password=testsendemailt88*
+spring.mail.port=465
+spring.mail.protocol=smtp
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+mail.smtp.ssl.enable=false
+mail.debug=true
