--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,13 @@
 spring.datasource.url=jdbc:mysql://localhost/sweater
 spring.datasource.username=root
 spring.datasource.password=root
-spring.jpa.generate-ddl=true
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.freemarker.expose-request-attributes=true
 upload.path=C:/Users/a.davydov/Desktop/sweater-JPA_Postgres/sweater-JPA_Postgres/src/main/resources/uploads
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-
+spring.jpa.generate-ddl=false
+spring.jpa.show-sql=false
+spring.jpa.hibernate.ddl-auto=validate
 
 spring.mail.host=smtp.gmail.com
 spring.mail.username=testsendemailt@gmail.com
