reCaptcha, rest client, rememberMe

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,7 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 mail.smtp.ssl.enable=false
 mail.debug=true
+
+recaptcha.secret=6Ld-6ZIUAAAAAAu2haxNEbyrrs-teVJcV10LFH05
+spring.session.jdbc.initialize-schema=always
+spring.session.jdbc.table-name=SPRING_SESSION
